objects/ffirule__ClickLinkManagedJob__c.object
<CustomObject>
    <customHelpPage>ffirule__helpclicklinkmanagedjob</customHelpPage>
    <fields>
        <fullName>ffirule__ApexJobID__c</fullName>
        <label>Apex Job ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ClickLinkJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Job</label>
        <referenceTo>ffirule__IntegrationRuleJob__c</referenceTo>
        <relationshipLabel>ClickLink Managed Jobs</relationshipLabel>
        <relationshipName>IntegrationRuleJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ClickLink Managed Job</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ClickLink Managed Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Managed Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>